<resources>

    <string name="google_maps_API_key">AIzaSyDjn7aKnY8NrWdkxTHC5gNgz7P_P3T6wVM</string>

    <string name="app_name">Dalhousie Navigation</string>

    <string name="login">Log In</string>
    <string name="ids">ID</string>
    <string name="signup">Sign Up</string>
    <string name="password">Password</string>
    <string name="signinMSG">If you do not have ID yet, please click </string>
    <string name="submitBT">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>

    <string name="idHint">Dalhousie Student ID</string>
    <string name="name">Name</string>
    <string name="repw">Re-Password</string>
    <string name="repwhint">Type password again</string>

    <string name="menu1">My Classes</string>
    <string name="menu2">All Classes</string>
    <string name="menu3">Buildings Lists</string>
    <string name="menu4">Services Lists</string>

    <string name="courseID">Course ID:</string>
    <string name="courseTitle">Course Title:</string>
    <string name="courseDuration">Course Duration:</string>
    <string name="CRN">CRN:</string>
    <string name="section">Course Section:</string>
    <string name="lectureType">Course Type:</string>
    <string name="crHrs">Credit Hours:</string>
    <string name="sunday">Sunday:</string>
    <string name="monday">Monday:</string>
    <string name="tuesday">Tuesday:</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday:</string>
    <string name="startHour">Start Hour:</string>
    <string name="startMinute">Start Minute:</string>
    <string name="endHour">End Hour:</string>
    <string name="endMinute">End Minute:</string>
    <string name="classLocation">Location:</string>
    <string name="seats">Seats:</string>
    <string name="currentFull">Currently filled Seats:</string>
    <string name="availSeats">Available Seats:</string>
    <string name="professor">Professor:</string>
    <string name="tuitionCode">Tuition Code:</string>
    <string name="bHrs">Tuition BHrs:</string>

    <string name="service_name">Service Name:</string>

    <string name="channel_name">Channel Name</string>
    <string name="channel_description">Channel Description</string>
    <string name="notification_title">Title</string>
    <string name="notification_content">content</string>

    <string name="next_floor">Next Floor</string>
    <string name="previous_floor">Previous Floor</string>

    <string name="find_travel_time">Find Travel Time</string>

    <string name="killam_interior">Killam Interior</string>

    <string name="interior_map">Interior Map</string>
    <string name="visual_aid">Visual Aid</string>
    <string name="exterior_map">Exterior Map</string>

</resources>
