...
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@color/brightGrey"
            android:gravity="center"
            android:text="@string/ids"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/idInput"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/idInput"
            android:layout_width="250dp"
...
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@color/brightGrey"
            android:gravity="center"
            android:text="@string/password"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/pwInput"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/promptID" />

        <EditText
            android:id="@+id/pwInput"
...
