<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/class_list_log_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Logout"
        android:background="@color/colorPrimary"
        android:textColor="@color/brightGrey"/>

    <ListView
        android:id="@+id/Class_List_List_View"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="45dp"/>

    <EditText
        android:id="@+id/List_View_Filter"
        android:text="@string/app_name"
        android:layout_width="0dp"
        android:layout_height="0dp" />

</android.support.constraint.ConstraintLayout>