...
        android:layout_gravity="center_horizontal"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/myclasses"
        app:layout_constraintBottom_toTopOf="@+id/buildingListButton"
        app:layout_constraintEnd_toStartOf="@+id/classListButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/classListButton"
...
